fix: links to each page

--- a/lesson4/gallery-7.html
+++ b/lesson4/gallery-7.html
@@ -26,8 +26,8 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="/weather/preston.html">Home</a></li>
-				<li><a href="#">Preston</a></li>
+				<li><a href="/lesson-5/index.html">Home</a></li>
+				<li><a href="/lesson-10/preston-10.html">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
 				<li><a href="/lesson4/stormcenter.html">Storm Center</a></li>
@@ -41,7 +41,11 @@
 					<figcaption class="gallery-description"> A field with sunset </figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-2.jpg" alt="village in the mountains" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-2.jpg"
+						alt="village in the mountains"
+					/>
 					<figcaption class="gallery-description">A village alongside a mountain</figcaption>
 				</figure>
 				<figure class="gallery-photo">
@@ -49,11 +53,19 @@
 					<figcaption class="gallery-description">Rainy road</figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-4.jpg" alt="town alongsidea mountain" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-4.jpg"
+						alt="town alongsidea mountain"
+					/>
 					<figcaption class="gallery-description">Cloudy hills</figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-5.jpg" alt="boat in the sea" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-5.jpg"
+						alt="boat in the sea"
+					/>
 					<figcaption class="gallery-description">Boat in the ocean</figcaption>
 				</figure>
 				<figure class="gallery-photo">
@@ -61,15 +73,27 @@
 					<figcaption class="gallery-description">A foggy road</figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-7.jpg" alt="mountain with snow" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-7.jpg"
+						alt="mountain with snow"
+					/>
 					<figcaption class="gallery-description">Winter on the mountains</figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-8.jpg" alt="sunset photo" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-8.jpg"
+						alt="sunset photo"
+					/>
 					<figcaption class="gallery-description">Perfect Sunset</figcaption>
 				</figure>
 				<figure class="gallery-photo">
-					<img src="/lesson4/images/placeholder-galery.jpg" data-src="/lesson4/images/nature-9.jpg" alt="winter in the forest" />
+					<img
+						src="/lesson4/images/placeholder-galery.jpg"
+						data-src="/lesson4/images/nature-9.jpg"
+						alt="winter in the forest"
+					/>
 					<figcaption class="gallery-description">Cold Winter</figcaption>
 				</figure>
 			</div>
