--- a/weather/preston.html
+++ b/weather/preston.html
@@ -45,8 +45,8 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Preston</a></li>
+				<li><a href="/lesson-5/index.html">Home</a></li>
+				<li><a href="/lesson-10/preston-10.html">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
 				<li><a href="/lesson4/stormcenter.html">Storm Center</a></li>
@@ -127,15 +127,20 @@
 							src="/weather/images/hero-img-5.jpg"
 							alt="river photo"
 							sizes="30%"
-							srcset="/weather/images/small-1.jpg 600w, /weather/images/medium-1.jpg 800w, /weather/images/large-1.jpg 1000w"
+							srcset="
+								/weather/images/small-1.jpg   600w,
+								/weather/images/medium-1.jpg  800w,
+								/weather/images/large-1.jpg  1000w
+							"
 						/>
 					</picture>
 					<p>
-						I was recently reflecting upon the founders day event held at Foundation Park each year. I have been taking the festival for
-						granted and have not been properly engaging in perhaps the most papular community event of the year. In response, I contacted
-						Ms. Sharon via email and expressed my desire to serve on the event committee. Well, you guessed it, the phone rings almost
-						immediately and she promptly asks me to be the event committee chair. Literally, good grief! My appreciation for the years of
-						dedicated, generous service of volunteers and sponsors has escalated beyond what I thought I could feel for such a thing and...
+						I was recently reflecting upon the founders day event held at Foundation Park each year. I have been taking
+						the festival for granted and have not been properly engaging in perhaps the most papular community event of
+						the year. In response, I contacted Ms. Sharon via email and expressed my desire to serve on the event
+						committee. Well, you guessed it, the phone rings almost immediately and she promptly asks me to be the event
+						committee chair. Literally, good grief! My appreciation for the years of dedicated, generous service of
+						volunteers and sponsors has escalated beyond what I thought I could feel for such a thing and...
 					</p>
 				</div>
 			</article>
