--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -45,8 +45,8 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Preston</a></li>
+				<li><a href="/lesson-5/index.html">Home</a></li>
+				<li><a href="/lesson-10/preston-10.html">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
 				<li><a href="/lesson4/stormcenter.html">Storm Center</a></li>
