--- a/lesson4/stormcenter.html
+++ b/lesson4/stormcenter.html
@@ -45,11 +45,11 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="/weather/preston.html">Home</a></li>
-				<li><a href="#">Preston</a></li>
+				<li><a href="/lesson-5/index.html">Home</a></li>
+				<li><a href="/lesson-10/preston-10.html">Preston</a></li>
 				<li><a href="#">Soda Springs</a></li>
 				<li><a href="#">Fish Haven</a></li>
-				<li><a href="stormcenter.html">Storm Center</a></li>
+				<li><a href="/lesson4/stormcenter.html">Storm Center</a></li>
 				<li><a href="/lesson4/gallery-7.html">Gallery</a></li>
 			</ul>
 		</nav>
