--- a/lesson-11/gallery.html
+++ b/lesson-11/gallery.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<!-- TABS ICON -->
+		<link rel="icon" type="image/png" href="/weather/images/sun&cloud-icon.png" />
 		<!-- <link rel="stylesheet" href="/lesson4/css/small.css" /> -->
 		<!-- <link rel="stylesheet" href="/lesson4/css/medium.css" /> -->
 		<link rel="stylesheet" href="/lesson-11/css/normalize.css" />
