fish haven and soda springs added

--- a/lesson-11/soda-springs.html
+++ b/lesson-11/soda-springs.html
@@ -46,8 +46,8 @@
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
 				<li><a href="/lesson-11/index.html" class="nav-link">Home</a></li>
-				<li><a href="/lesson-11/preston.html" class="nav-link active">Preston</a></li>
-				<li><a href="/lesson-11/soda-springs.html" class="nav-link">Soda Springs</a></li>
+				<li><a href="/lesson-11/preston.html" class="nav-link">Preston</a></li>
+				<li><a href="/lesson-11/soda-springs.html" class="nav-link active">Soda Springs</a></li>
 				<li><a href="/lesson-11/fish-haven.html" class="nav-link">Fish Haven</a></li>
 				<li><a href="/lesson-11/stormcenter.html" class="nav-link">Storm Center</a></li>
 				<li><a href="/lesson-11/gallery.html" class="nav-link">Gallery</a></li>
@@ -57,7 +57,7 @@
 		<!-- CONTENT HERE -->
 		<main class="container">
 			<article class="hero-section">
-				<h2>Preston Idaho</h2>
+				<h2>Soda Springs</h2>
 				<picture class="hero-image">
 					<source media="" srcset="" />
 					<img
