--- a/lesson-11/stormcenter.html
+++ b/lesson-11/stormcenter.html
@@ -45,12 +45,12 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="/lesson-11/index.html">Home</a></li>
-				<li><a href="/lesson-11/preston.html">Preston</a></li>
-				<li><a href="#">Soda Springs</a></li>
-				<li><a href="#">Fish Haven</a></li>
-				<li><a href="/lesson-11/stormcenter.html">Storm Center</a></li>
-				<li><a href="/lesson-11/gallery.html">Gallery</a></li>
+				<li><a href="/lesson-11/index.html" class="nav-link">Home</a></li>
+				<li><a href="/lesson-11/preston.html" class="nav-link">Preston</a></li>
+				<li><a href="/lesson-11/soda-springs.html" class="nav-link">Soda Springs</a></li>
+				<li><a href="/lesson-11/fish-haven.html" class="nav-link">Fish Haven</a></li>
+				<li><a href="/lesson-11/stormcenter.html" class="nav-link active">Storm Center</a></li>
+				<li><a href="/lesson-11/gallery.html" class="nav-link">Gallery</a></li>
 			</ul>
 		</nav>
 
