scripts and styles on lesson-11

--- a/lesson-11/fish-haven.html
+++ b/lesson-11/fish-haven.html
@@ -57,7 +57,7 @@
 		<!-- CONTENT HERE -->
 		<main class="container">
 			<article class="hero-section">
-				<h2>Fish Haven</h2>
+				<h1 class="main-title">Fish Haven</h1>
 				<picture class="hero-image">
 					<source media="" srcset="" />
 					<img
@@ -91,6 +91,10 @@
 						</div>
 					</div>
 				</div>
+			</article>
+			<article class="events">
+				<h2>Upcoming Events</h2>
+				<hr />
 			</article>
 
 			<article class="forecast">
@@ -197,5 +201,6 @@
 
 		<script src="/lesson-11/JS/scripts.js"></script>
 		<script src="/lesson-11/JS/windchill.js"></script>
+		<script src="/lesson-11/JS/townEvents.js"></script>
 	</body>
 </html>
