added link to open weather API

--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -103,6 +103,7 @@
 		<footer class="contact-info">
 			<p>&copy; <span class="year"></span> |The Sun&Cloud Weather Site | Attributions | Alan Crisanto |</p>
 			<p class="updated"></p>
+			<p class="openWeather">Weather by <a href="https://openweathermap.org/" target="_blank"> OpenWeatherMaps</a></p>
 		</footer>
 
 		<script src="/lesson-11/JS/scripts.js"></script>
