--- a/final/index.html
+++ b/final/index.html
@@ -10,6 +10,15 @@
 		/>
 		<meta name="author" content="Alan Crisanto" />
 
+		<!-- FONT AWESOME CDN -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+			integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+
 		<!-- TABS ICON -->
 		<link rel="icon" type="image/png" href="/final/assets/images/scoots-logo-1.png" />
 
@@ -78,11 +87,12 @@
 				<div class="hero-info">
 					<h1> Cool Scooters </h1>
 					<h3>One for Everyone</h3>
-					<p
-						>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias, blanditiis? Amet obcaecati laborum nisi
-						rerum cupiditate temporibus, delectus tempore a natus, repellendus eligendi dolore. Voluptate eaque at iusto
-						animi odit.</p
-					>
+					<p>
+						Vacation in Cozumel, and odds are that you’ll go home utterly relaxed and with memories of spectacular
+						scenery and friendly people. A 34-mile-long by 11-mile-wide island off of Mexico's Riviera Maya, Cozumel is
+						quite unlike its neighbor. To make this experience unforgateable we have <strong> GoScoots</strong> to help
+						you enjoy wonderfull momments around the island.
+					</p>
 					<button>Booking Now</button>
 				</div>
 			</section>
@@ -164,5 +174,50 @@
 				</div>
 			</div>
 		</main>
+		<footer>
+			<div class="contact-footer">
+				<h3>Contact Information</h3>
+				<div class="contact-adress">
+					<h4>Playa del Carmen-Cozumel Ferry dock</h4>
+					<p><i class="fa-solid fa-location-dot"></i> Av Lic Benito Juárez 15 A, Centro, 77600 </p>
+					<div class="contact-map">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1868.4640609279743!2d-86.94826114207623!3d20.509172608772563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e592f8e46fe51%3A0x3fe8a063d534d433!2sMercer%C3%ADa%20Liz!5e0!3m2!1ses-419!2spe!4v1658190552865!5m2!1ses-419!2spe"
+							width="600"
+							height="450"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+					</div>
+				</div>
+				<div class="contact-adress">
+					<h4>Terminal Puerta Maya </h4>
+					<p><i class="fa-solid fa-location-dot"></i> Av. Rafael E. Melgar 1a, 77675 Q.R., México</p>
+					<div class="contact-map">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.4367858910311!2d-86.97345365835251!3d20.475576091117354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c3e2740b46421cf!2zMjDCsDI4JzMxLjciTiA4NsKwNTgnMjMuNiJX!5e0!3m2!1ses-419!2spe!4v1658190411894!5m2!1ses-419!2spe"
+							width="600"
+							height="450"
+							style="border: 0"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+					</div>
+				</div>
+				<div class="social-icons">
+					<i class="fa-brands fa-facebook-square"></i>
+					<i class="fa-brands fa-twitter-square"></i>
+					<i class="fa-brands fa-youtube"></i>
+				</div>
+			</div>
+
+			<div class="updated">
+				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
+				<span class="updated-date"></span>
+			</div>
+		</footer>
 	</body>
 </html>
