--- a/final/index.html
+++ b/final/index.html
@@ -215,8 +215,10 @@
 			</div>
 
 			<div class="updated">
-				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
 				<span class="updated-date"></span>
+				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
+				<i class="fa-brands fa-github"></i>
+				<i class="fa-brands fa-linkedin"></i>
 			</div>
 		</footer>
 	</body>
