fix color to icons

--- a/final/index.html
+++ b/final/index.html
@@ -63,20 +63,20 @@
 		<main class="container">
 			<section class="hero-section">
 				<div class="weather-summary">
-					<div>
+					<div class="weather-data">
 						<span class="icon">🌤️</span>
 						<h5>Contumal</h5>
 						<h3>28 °F</h3>
 					</div>
-					<div>
+					<div class="weather-data humidity">
 						<h5>Humidity</h5>
 						<h3>50%</h3>
 					</div>
-					<div>
+					<div class="weather-data">
 						<h5>Air Speed</h5>
 						<h3>8 mph</h3>
 					</div>
-					<div>
+					<div class="weather-data">
 						<h5>Windchill</h5>
 						<h3>16.9 °F</h3>
 					</div>
@@ -208,17 +208,17 @@
 					</div>
 				</div>
 				<div class="social-icons">
-					<i class="fa-brands fa-facebook-square"></i>
-					<i class="fa-brands fa-twitter-square"></i>
-					<i class="fa-brands fa-youtube"></i>
+					<a href=""><i class="fa-brands fa-facebook-square"></i></a>
+					<a href=""><i class="fa-brands fa-twitter-square"></i></a>
+					<a href=""><i class="fa-brands fa-youtube"></i></a>
 				</div>
 			</div>
 
 			<div class="updated">
 				<span class="updated-date"></span>
 				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
-				<i class="fa-brands fa-github"></i>
-				<i class="fa-brands fa-linkedin"></i>
+				<a href=""><i class="fa-brands fa-github"></i></a>
+				<a href=""><i class="fa-brands fa-linkedin"></i></a>
 			</div>
 		</footer>
 	</body>
