links to footer icons

--- a/final/index.html
+++ b/final/index.html
@@ -208,17 +208,23 @@
 					</div>
 				</div>
 				<div class="social-icons">
-					<a href=""><i class="fa-brands fa-facebook-square"></i></a>
-					<a href=""><i class="fa-brands fa-twitter-square"></i></a>
-					<a href=""><i class="fa-brands fa-youtube"></i></a>
+					<a href="https://www.facebook.com/VehicleRentalCozumel/" target="_blank">
+						<i class="fa-brands fa-facebook-square"></i>
+					</a>
+					<a href="https://twitter.com/_KarlaaFajardo/status/809955877776191488/photo/1" target="_blank">
+						<i class="fa-brands fa-twitter-square"></i>
+					</a>
+					<a href="https://www.youtube.com/watch?v=VAlazzOsVOQ" target="_blank">
+						<i class="fa-brands fa-youtube"></i>
+					</a>
 				</div>
 			</div>
 
 			<div class="updated">
 				<span class="updated-date"></span>
 				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
-				<a href=""><i class="fa-brands fa-github"></i></a>
-				<a href=""><i class="fa-brands fa-linkedin"></i></a>
+				<a href="https://github.com/alancrisanto" target="_blank"><i class="fa-brands fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/alancrisanto/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 			</div>
 		</footer>
 	</body>
