--- a/final/rentals.html
+++ b/final/rentals.html
@@ -60,120 +60,7 @@
 				<li><a href="/final/contact.html" class="nav-link">Contact</a></li>
 			</ul>
 		</nav>
-		<main class="container">
-			<section class="hero-section">
-				<div class="weather-summary">
-					<div class="weather-data">
-						<span class="icon">🌤️</span>
-						<h5>Contumal</h5>
-						<h3>28 °F</h3>
-					</div>
-					<div class="weather-data humidity">
-						<h5>Humidity</h5>
-						<h3>50%</h3>
-					</div>
-					<div class="weather-data">
-						<h5>Air Speed</h5>
-						<h3>8 mph</h3>
-					</div>
-					<div class="weather-data">
-						<h5>Windchill</h5>
-						<h3>16.9 °F</h3>
-					</div>
-				</div>
-				<div class="hero-image">
-					<img src="/final/assets/images/scooter-man.png" alt="man in scooter" />
-				</div>
-				<div class="hero-info">
-					<h1> Cool Scooters </h1>
-					<h3>One for Everyone</h3>
-					<p>
-						Vacation in Cozumel, and odds are that you’ll go home utterly relaxed and with memories of spectacular
-						scenery and friendly people. A 34-mile-long by 11-mile-wide island off of Mexico's Riviera Maya, Cozumel is
-						quite unlike its neighbor. To make this experience unforgateable we have <strong> GoScoots</strong> to help
-						you enjoy wonderfull momments around the island.
-					</p>
-					<a href="/final/reservations.html"><button>Booking Now</button></a>
-				</div>
-			</section>
-
-			<!-- FORECAST CONTAINER -->
-
-			<article class="forecast">
-				<h3>Five Day Forecast</h3>
-				<div class="forecast-flex">
-					<div class="forecast-box">
-						<p id="day1">Wed</p>
-						<p id="icon1">🌤️</p>
-					</div>
-					<div class="forecast-box">
-						<p id="day2">Thu</p>
-						<p id="icon2">🌤️</p>
-					</div>
-					<div class="forecast-box">
-						<p id="day3">Fri</p>
-						<p id="icon3">🌤️</p>
-					</div>
-					<div class="forecast-box">
-						<p id="day4">Sat</p>
-						<p id="icon4">🌤️</p>
-					</div>
-					<div class="forecast-box">
-						<p id="day5">Sun</p>
-						<p id="icon5">🌤️</p>
-					</div>
-					<div class="forecast-box">
-						<p id="day">Wed</p>
-						<p>🌤️</p>
-					</div>
-				</div>
-			</article>
-
-			<!-- SLIDESHOW CONTAINER -->
-			<div class="images-gallery">
-				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-dio.png" />
-					<hr />
-					<h3 class="text">Honda Dio</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-
-				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-metro.png" />
-					<hr />
-					<h3 class="text">Honda Metro</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-
-				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-pcx.png" />
-					<hr />
-					<h3 class="text">Honda PCX</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-
-				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-Pioneer.png" />
-					<hr />
-					<h3 class="text">Honda Pioneer</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-
-				<div class="honda-scoots">
-					<img src="/final/assets/images/2door.png" />
-					<hr />
-					<h3 class="text">2dr Jeep Wrangler</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-
-				<div class="honda-scoots">
-					<img src="/final/assets/images/4door.png" />
-					<hr />
-					<h3 class="text">4dr Jeep Wrangler</h3>
-					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
-				</div>
-			</div>
-		</main>
+		<main class="container"> </main>
 		<footer>
 			<div class="contact-footer">
 				<h3>Contact Information</h3>
