--- a/final/index.html
+++ b/final/index.html
@@ -63,37 +63,42 @@
 		<main class="container">
 			<section class="hero-section">
 				<div class="weather-summary">
-					<div class="weather-data">
+					<div class="weather-data currently">
+						<h5>currently</h5>
 						<span class="icon">🌤️</span>
-						<h5>Contumal</h5>
-						<h3>28 °F</h3>
+					</div>
+					<div class="weather-data">
+						<h5>High</h5>
+						<h3><span class="temp">28</span>°F</h3>
 					</div>
 					<div class="weather-data humidity">
 						<h5>Humidity</h5>
-						<h3>50%</h3>
+						<h3><span class="humidity">50</span>%</h3>
 					</div>
-					<div class="weather-data">
+					<div class="weather-data air-speed">
 						<h5>Air Speed</h5>
-						<h3>8 mph</h3>
+						<h3><span class="speed">8</span>mph</h3>
 					</div>
-					<div class="weather-data">
+					<div class="weather-data windchill-head">
 						<h5>Windchill</h5>
-						<h3>16.9 °F</h3>
+						<h3><span class="windchill">16.9</span>°F</h3>
 					</div>
 				</div>
-				<div class="hero-image">
-					<img src="/final/assets/images/scooter-man.png" alt="man in scooter" />
-				</div>
-				<div class="hero-info">
-					<h1> Cool Scooters </h1>
-					<h3>One for Everyone</h3>
-					<p>
-						Vacation in Cozumel, and odds are that you’ll go home utterly relaxed and with memories of spectacular
-						scenery and friendly people. A 34-mile-long by 11-mile-wide island off of Mexico's Riviera Maya, Cozumel is
-						quite unlike its neighbor. To make this experience unforgateable we have <strong> GoScoots</strong> to help
-						you enjoy wonderfull momments around the island.
-					</p>
-					<a href="/final/reservations.html"><button>Booking Now</button></a>
+				<div class="hero-decription">
+					<div class="hero-image">
+						<img src="/final/assets/images/scooter-man.png" alt="man in scooter" />
+					</div>
+					<div class="hero-info">
+						<h1> Cool Scooters </h1>
+						<h3>One for Everyone</h3>
+						<p>
+							Vacation in Cozumel, and odds are that you'll go home utterly relaxed and with memories of spectacular
+							scenery and friendly people. A 34-mile-long by 11-mile-wide island off of Mexico's Riviera Maya, Cozumel
+							is quite unlike its neighbor. To make this experience unforgateable we have <strong> GoScoots</strong> to
+							help you enjoy wonderfull momments around the island.
+						</p>
+						<a href="/final/reservations.html"><button>Booking Now</button></a>
+					</div>
 				</div>
 			</section>
 
@@ -177,34 +182,36 @@
 		<footer>
 			<div class="contact-footer">
 				<h3>Contact Information</h3>
-				<div class="contact-adress">
-					<h4>Playa del Carmen-Cozumel Ferry dock</h4>
-					<p><i class="fa-solid fa-location-dot"></i> Av Lic Benito Juárez 15 A, Centro, 77600 </p>
-					<div class="contact-map">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1868.4640609279743!2d-86.94826114207623!3d20.509172608772563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e592f8e46fe51%3A0x3fe8a063d534d433!2sMercer%C3%ADa%20Liz!5e0!3m2!1ses-419!2spe!4v1658190552865!5m2!1ses-419!2spe"
-							width="600"
-							height="450"
-							style="border: 0"
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
+				<div class="address">
+					<div class="contact-adress">
+						<h4>Playa del Carmen-Cozumel Ferry dock</h4>
+						<p><i class="fa-solid fa-location-dot"></i> Av Lic Benito Juárez 15 A, Centro, 77600 </p>
+						<div class="contact-map">
+							<iframe
+								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1868.4640609279743!2d-86.94826114207623!3d20.509172608772563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e592f8e46fe51%3A0x3fe8a063d534d433!2sMercer%C3%ADa%20Liz!5e0!3m2!1ses-419!2spe!4v1658190552865!5m2!1ses-419!2spe"
+								width="300"
+								height="250"
+								style="border: 0"
+								allowfullscreen=""
+								loading="lazy"
+								referrerpolicy="no-referrer-when-downgrade"
+							></iframe>
+						</div>
 					</div>
-				</div>
-				<div class="contact-adress">
-					<h4>Terminal Puerta Maya </h4>
-					<p><i class="fa-solid fa-location-dot"></i> Av. Rafael E. Melgar 1a, 77675 Q.R., México</p>
-					<div class="contact-map">
-						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.4367858910311!2d-86.97345365835251!3d20.475576091117354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c3e2740b46421cf!2zMjDCsDI4JzMxLjciTiA4NsKwNTgnMjMuNiJX!5e0!3m2!1ses-419!2spe!4v1658190411894!5m2!1ses-419!2spe"
-							width="600"
-							height="450"
-							style="border: 0"
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
+					<div class="contact-adress">
+						<h4>Terminal Puerta Maya </h4>
+						<p><i class="fa-solid fa-location-dot"></i> Av. Rafael E. Melgar 1a, 77675 Q.R., México</p>
+						<div class="contact-map">
+							<iframe
+								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d934.4367858910311!2d-86.97345365835251!3d20.475576091117354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c3e2740b46421cf!2zMjDCsDI4JzMxLjciTiA4NsKwNTgnMjMuNiJX!5e0!3m2!1ses-419!2spe!4v1658190411894!5m2!1ses-419!2spe"
+								width="300"
+								height="250"
+								style="border: 0"
+								allowfullscreen=""
+								loading="lazy"
+								referrerpolicy="no-referrer-when-downgrade"
+							></iframe>
+						</div>
 					</div>
 				</div>
 				<div class="social-icons">
