open weather link in footer added

--- a/final/index.html
+++ b/final/index.html
@@ -209,6 +209,7 @@
 
 			<div class="updated">
 				<span class="updated-date"></span>
+				<p>Weather By <a class="openWeather" href="https://openweathermap.org/">https://openweathermap.org/</a></p>
 				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
 				<a href="https://github.com/alancrisanto" target="_blank"><i class="fa-brands fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/alancrisanto/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
