--- a/final/tours.html
+++ b/final/tours.html
@@ -53,10 +53,10 @@
 		<nav>
 			<ul class="navigation">
 				<li><a href="#" class="ham">Menu</a></li>
-				<li><a href="/final/index.html" class="nav-link active">Home</a></li>
+				<li><a href="/final/index.html" class="nav-link">Home</a></li>
 				<li><a href="/final/rentals.html" class="nav-link">Rentals</a></li>
 				<li><a href="/final/reservations.html" class="nav-link">Reservations</a></li>
-				<li><a href="/final/tours.html" class="nav-link">Tours</a></li>
+				<li><a href="/final/tours.html" class="nav-link active">Tours</a></li>
 				<li><a href="/final/contact.html" class="nav-link">Contact</a></li>
 			</ul>
 		</nav>
@@ -111,6 +111,7 @@
 
 			<div class="updated">
 				<span class="updated-date"></span>
+				<p>Weather By <a class="openWeather" href="https://openweathermap.org/">https://openweathermap.org/</a></p>
 				<h3>Developed By Alan Crisanto <span class="year"></span></h3>
 				<a href="https://github.com/alancrisanto" target="_blank"><i class="fa-brands fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/alancrisanto/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
