information in rentals and fix windchill display

--- a/final/rentals.html
+++ b/final/rentals.html
@@ -60,7 +60,30 @@
 				<li><a href="/final/contact.html" class="nav-link">Contact</a></li>
 			</ul>
 		</nav>
-		<main class="container"> </main>
+		<main class="container">
+			<section class="scooters-specif"> </section>
+			<section class="conditions">
+				<h2>Information and services</h2>
+				<div class="list-box">
+					<ul class="list list-a">
+						<li>$50 security deposit (credit card only) required to confirm reservations.</li>
+						<li>Valid drivers license in hand required at time of rental.</li>
+						<li>No one under 12 years of age is allowed to ride on the scooters.</li>
+						<li>Fuel charge not included.</li>
+						<li>Unlimited mileage.</li>
+					</ul>
+				</div>
+				<div class="list-box">
+					<ul class="list list-b">
+						<li>Liability insurance is free of charge.</li>
+						<li>Reservations rate requires 24 hour prior notification.</li>
+						<li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals. </li>
+						<li>Payment via Google Pay, cash, credit card, debit card, or PayPal. </li>
+						<li>Rentals may be returned to either location. </li>
+					</ul>
+				</div>
+			</section>
+		</main>
 		<footer>
 			<div class="contact-footer">
 				<h3>Contact Information</h3>
