fix windchill in index

--- a/final/index.html
+++ b/final/index.html
@@ -80,11 +80,11 @@
 					</div>
 					<div class="weather-data air-speed">
 						<h5>Air Speed</h5>
-						<h3><span class="speed">8</span>mph</h3>
+						<h3><span class="speed"></span>mph</h3>
 					</div>
 					<div class="weather-data windchill-head">
 						<h5>Windchill</h5>
-						<h3><span class="windchill"></span>°F</h3>
+						<h3><span class="windchill"></span></h3>
 					</div>
 				</div>
 				<div class="hero-decription">
