added in data url vehicle image

--- a/final/rentals.html
+++ b/final/rentals.html
@@ -41,6 +41,7 @@
 
 		<!-- SCRIPTS -->
 		<script src="/final/js/index.js" defer></script>
+		<script src="/final/js/rental.js" defer></script>
 		<title>GoScoots</title>
 	</head>
 	<body>
