form images srcset

--- a/final/reservations.html
+++ b/final/reservations.html
@@ -62,6 +62,12 @@
 			</ul>
 		</nav>
 		<main class="container">
+			<picture class="hero-image">
+				<source media="(max-width: 450px)" srcset="/final/assets/images/scooter-2-small.jpg" />
+				<source media="(max-width: 690px)" srcset="/final/assets/images/scooter-2-medium.jpg" />
+				<source media="(max-width: 790px)" srcset="/final/assets/images/scooter-2-large.jpg" />
+				<img src="/final/assets/images/scooter-2.jpg" alt="Hero imagen sunset Cozumel" />
+			</picture>
 			<div class="form">
 				<form action="/final/thanks.html">
 					<fieldset>
