tour page added

--- a/final/tours.html
+++ b/final/tours.html
@@ -41,6 +41,7 @@
 
 		<!-- SCRIPTS -->
 		<script src="/final/js/index.js" defer></script>
+		<script src="/final/js/lazyLoad.js" defer></script>
 		<title>GoScoots</title>
 	</head>
 	<body>
@@ -60,7 +61,87 @@
 				<li><a href="/final/contact.html" class="nav-link">Contact</a></li>
 			</ul>
 		</nav>
-		<main class="container"> </main>
+		<main class="container">
+			<article class="tour-article">
+				<h1>Join the Adventure in Cozumel With GoScoots</h1>
+				<p>
+					Cozumel, a mostly undeveloped Mexican island in the Caribbean Sea, is a popular cruise ship port of call famed
+					for its scuba diving The Cozumel Port gets millions of cruise ship passengers each year. The Port of Cozumel
+					was rated #3 for the best cruise ports in the World. The Island was also rated as one of the top safest places
+					in the World to live or travel.
+				</p>
+			</article>
+			<div class="gallery-container">
+				<figure class="gallery-photo">
+					<img src="/final/assets/images/placeholder.jpg" data-src="/final/assets/images/cozumel-1.jpg" alt="field" />
+					<figcaption class="gallery-description"> The perfect sunset </figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-2.jpg"
+						alt="village in the mountains"
+					/>
+					<figcaption class="gallery-description">Snorkeling with fishes</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-3.jpg"
+						alt="Rainy road"
+					/>
+					<figcaption class="gallery-description">Playa del Carmen</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-4.jpg"
+						alt="town alongsidea mountain"
+					/>
+					<figcaption class="gallery-description">Rivera Maya</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-5.jpg"
+						alt="boat in the sea"
+					/>
+					<figcaption class="gallery-description">The perfect Day</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/lesson-11/assets/images/placeholder-galery.jpg"
+						data-src="/final/assets/images/cozumel-6.jpg"
+						alt="foggy road"
+					/>
+					<figcaption class="gallery-description">Day of the Dead</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-7.jpg"
+						alt="mountain with snow"
+					/>
+					<figcaption class="gallery-description">An Old Truck</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-8.jpg"
+						alt="sunset photo"
+					/>
+					<figcaption class="gallery-description">Vacations on a Crucero</figcaption>
+				</figure>
+				<figure class="gallery-photo">
+					<img
+						src="/final/assets/images/placeholder.jpg"
+						data-src="/final/assets/images/cozumel-9.jpg"
+						alt="winter in the forest"
+					/>
+					<figcaption class="gallery-description">Meet the Iguanas</figcaption>
+				</figure>
+			</div>
+		</main>
 		<footer>
 			<div class="contact-footer">
 				<h3>Contact Information</h3>
