styles in confirmation page

--- a/final/thanks.html
+++ b/final/thanks.html
@@ -61,7 +61,11 @@
 			</ul>
 		</nav>
 		<main class="container">
-			<h1>You reservation has been confirmed</h1>
+			<div class="confirmation-card">
+				<img src="/final/assets/images/success.png" alt="success-icon" />
+				<h1>Your information has been received</h1>
+				<a href="/final/index.html"><button>Explore more Scooters</button></a>
+			</div>
 		</main>
 		<footer>
 			<div class="contact-footer">
