--- a/final/contact.html
+++ b/final/contact.html
@@ -80,7 +80,7 @@
 						</label>
 						<label class="danger">
 							<input type="checkbox" name="policies" required />
-							<p class="form-policies"> I agree to the <a href=""> GoScoots Privacy Policy</a></p>
+							<span class="form-policies"> I agree to the <a href=""> GoScoots Privacy Policy</a></span>
 						</label>
 						<input class="contactBtn" type="submit" name="submit" value="Submit" />
 					</fieldset>
