--- a/final/rentals.html
+++ b/final/rentals.html
@@ -62,7 +62,7 @@
 			</ul>
 		</nav>
 		<main class="container">
-			<section class="scooters-specif"> </section>
+			<div class="scooters-specif"> </div>
 			<section class="conditions">
 				<h2>Information and services</h2>
 				<div class="list-box">
