--- a/final/index.html
+++ b/final/index.html
@@ -84,7 +84,7 @@
 					</div>
 					<div class="weather-data windchill-head">
 						<h5>Windchill</h5>
-						<h3><span class="windchill"></span></h3>
+						<h3><span class="windchill"></span>.</h3>
 					</div>
 				</div>
 				<div class="hero-decription">
@@ -117,42 +117,42 @@
 			<!-- SLIDESHOW CONTAINER -->
 			<div class="images-gallery">
 				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-dio.png" />
+					<img src="/final/assets/images/honda-dio.png" alt="honda-dio" />
 					<hr />
 					<h3 class="text">Honda Dio</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
 				</div>
 
 				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-metro.png" />
+					<img src="/final/assets/images/honda-metro.png" alt="honda-metro" />
 					<hr />
 					<h3 class="text">Honda Metro</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
 				</div>
 
 				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-pcx.png" />
+					<img src="/final/assets/images/honda-pcx.png" alt="honda-pcx" />
 					<hr />
 					<h3 class="text">Honda PCX</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
 				</div>
 
 				<div class="honda-scoots">
-					<img src="/final/assets/images/honda-Pioneer.png" />
+					<img src="/final/assets/images/honda-Pioneer.png" alt="honda-pioneer" />
 					<hr />
 					<h3 class="text">Honda Pioneer</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
 				</div>
 
 				<div class="honda-scoots">
-					<img src="/final/assets/images/2door.png" />
+					<img src="/final/assets/images/2door.png" alt="jeep-2door" />
 					<hr />
 					<h3 class="text">2dr Jeep Wrangler</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
 				</div>
 
 				<div class="honda-scoots">
-					<img src="/final/assets/images/4door.png" />
+					<img src="/final/assets/images/4door.png" alt="jeep-4door" />
 					<hr />
 					<h3 class="text">4dr Jeep Wrangler</h3>
 					<a href="/final/rentals.html"><button class="detailBtn">More Info</button></a>
